# physics-engine

./: CMakeLists.txt
dependencies/glad/: glad.h
src/: component_storage.cpp  component_storage.h  entity_manager.cpp  entity_manager.h  game.cpp  game.h  glad.c  program.cpp  registry.cpp  registry.h  stb_image.cpp
src/components/: sprite.h  transform.h
src/systems/: render.cpp  render_context.cpp  render_system.cpp
